--- a/.gitignore
+++ b/.gitignore
@@ -178,4 +178,6 @@ buildNumber.properties
 .history
 .ionide
 
+/.idea
+
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,visualstudiocode,maven
