--- a/.gitignore
+++ b/.gitignore
@@ -179,5 +179,6 @@ buildNumber.properties
 .ionide
 
 /.idea
+innoIT.iml
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,visualstudiocode,maven
